--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
     "yeoman-generator"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "Salomone Baquis",
   "license": "ISC",
   "dependencies": {
+    "yeoman-assert": "^3.1.1",
     "yeoman-generator": "^4.0.1"
+  },
+  "devDependencies": {
+    "mocha": "^6.1.4",
+    "rimraf": "^2.6.3",
+    "yeoman-test": "^2.0.0"
   }
 }
